# fractions-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  IFLOW.md  README.md  README_8md.html  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classes.html  classfractions_1_1_fractions.html  compare_report.md  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_48dda5be812c77a4974cf497b2a78a87.html  dir_efc517448da1cf4216d09f3867bece28.html  extfractions_8hpp.html  extfractions_8hpp__incl.map  extfractions_8hpp__incl.md5  extfractions_8hpp_source.html  files.html  fractions-slides.md  fractions_8hpp.html  fractions_8hpp__incl.map  fractions_8hpp__incl.md5  fractions_8hpp_source.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  greeter_8h.html  index.html  menudata.js  modules.html  (+17 more)
.cache/clangd/index/: fractions.hpp.BBEF02FA52A002E1.idx  greeter.cpp.517BCEC5B2717A04.idx  greeter.cpp.C28EACFDED67942C.idx  greeter.h.1634E051DE5FDA0F.idx  main.cpp.30CE243D451E6D49.idx  main.cpp.9BD31E91BE4DC5B7.idx  test_frac.cpp.EEC922F92F387CE6.idx
.github/workflows/: install.yml  standalone.bak  test.bak  ubuntu.yml
bench/: CMakeLists.txt  bench_comparison.cpp  xmake.lua
documentation/: CMakeLists.txt  conf.py
examples/: CMakeLists.txt  spdlog_example.cpp
examples/CPM_modules/: FindPackageProject.cmake.cmake  Findfmt.cmake
examples/cmake/: CPM_0.38.5.cmake
include/fractions/: extfractions.hpp  fastfractions.hpp  fractions.hpp  pyfractions.hpp
include/greeter/: greeter.h
python_ai/: README.md  demo.py  pyproject.toml  setup.py  test_fractions.py  type_check_test.py
python_ai/examples/: basic_usage.py
python_ai/fractions/: __init__.py  fraction.py  utils.py
rust_ai/: .gitignore  Cargo.toml  fractions.py
rust_ai/proptest-regressions/: lib.txt
rust_ai/src/: lib.rs  main.rs
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_1.js  (+2 more)
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  test_coverage_gaps.cpp  test_frac.cpp  test_frac_comprehensive.cpp  test_frac_extended.cpp  test_frac_gaps.cpp  test_frac_property.cpp  test_frac_stress.cpp  test_pyfractions.cpp  test_pyfractions_comprehensive.cpp
